Fix RetrofitResponseTest tests